crates/oxc_css_parser/tests/error/scss/at-rule/function/missing-parens.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `(`, but found `{`
  ┌─ missing-parens.scss:1:16
  │
1 │ @function test {}
  │                ^


